🐌 Fix inline-break in table-block

--- a/src/styles/notion-block.module.css
+++ b/src/styles/notion-block.module.css
@@ -116,7 +116,7 @@
 }
 .table th,
 .table td {
-  white-space: nowrap;
+  white-space: pre;
 }
 
 .columnList {
